Fix bug of training overview hero wrapper hexagon graphic causing horizontal scroll

--- a/src/assets/custom/css/custom-global-styles.scss
+++ b/src/assets/custom/css/custom-global-styles.scss
@@ -20,6 +20,7 @@ body {
   /* 0 0 0 1 */
   font-size: 15px;
   font-family: proxima-nova, sans-serif;
+  overflow-x: hidden;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
